--- a/Text_classification.ipynb
+++ b/Text_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOBF/lyTA4Hb7b6ozan+5nc",
+      "authorship_tag": "ABX9TyNuuofv1Ux1I9VAvFm0l+Aq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,7 +43,7 @@
     {
       "cell_type": "code",
       "source": [
-        "dataset.shape\n"
+        "dataset.shape"
       ],
       "metadata": {
         "id": "f5z_lZjlUyFe"
@@ -223,15 +223,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "pLdFSWvWcWZK"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
         "word_freq=gen_freq(dataset.clean_text.str)\n",
         "rare_100=word_freq[-100:]\n",
@@ -249,9 +240,125 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "dataset.head(10)"
+      ],
       "metadata": {
         "id": "rMUKmj4mc8mL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "X=dataset[['word_count','any_neg','any_rare','is_question']]\n",
+        "y=dataset.label\n",
+        "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.2,random_state=0)\n"
+      ],
+      "metadata": {
+        "id": "26GpuZIfrKgZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4.Train an ML model for Text Classifictaion"
+      ],
+      "metadata": {
+        "id": "FyHf1x4zrvL7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.naive_bayes import GaussianNB\n",
+        "model=GaussianNB()\n",
+        "model=model.fit(X_train,y_train)\n",
+        "y_pred=model.predict(X_test)"
+      ],
+      "metadata": {
+        "id": "PL-700cprsak"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model.predict(X_test[5:10])"
+      ],
+      "metadata": {
+        "id": "vYxLw0s8tExf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import accuracy_score\n",
+        "print(\"Accuracy:\",accuracy_score(y_test,y_pred)*100,\"%\")"
+      ],
+      "metadata": {
+        "id": "qWIumoo6tiTR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "clf_rf=RandomForestClassifier()\n",
+        "clf_rf.fit(X_train,y_train)\n",
+        "rf_pred=clf_rf.predict(X_test).astype(int)"
+      ],
+      "metadata": {
+        "id": "QyH3gAJ8vVYy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import classification_report,confusion_matrix,accuracy_score\n",
+        "print(classification_report(y_test,rf_pred))\n",
+        "print(confusion_matrix(y_test,rf_pred))\n",
+        "print(\"Accuracy:\",accuracy_score(y_test,rf_pred))"
+      ],
+      "metadata": {
+        "id": "djZO0S-SwCuu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.linear_model import LogisticRegression\n",
+        "logreg=LogisticRegression(class_weight='balanced')\n",
+        "\n",
+        "logreg.fit(X_train,y_train)\n"
+      ],
+      "metadata": {
+        "id": "ZJa36vQdxehI"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import classification_report\n",
+        "print(classification_report(y_test,y_pred))"
+      ],
+      "metadata": {
+        "id": "lI5YYJFByPPT"
       },
       "execution_count": null,
       "outputs": []
