--- a/FN_2_2.ipynb
+++ b/FN_2_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNidhR7Whz1lww2L8xGETjH",
+      "authorship_tag": "ABX9TyOO+eqF/uahczGrtoCMGTt7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,8 +27,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "PSv-PPwJu--C"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "KK-UCAx6XKxR"
       },
@@ -52,9 +59,9 @@
           "height": 275
         },
         "id": "mrN7mRJMXYgS",
-        "outputId": "294f4145-25e3-404f-8fba-a84c183643bf"
+        "outputId": "57081b84-6750-40c9-b325-7bc8087d1d97"
       },
-      "execution_count": 3,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -76,7 +83,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-91fcc0c4-5e22-467e-a39d-23e5b3b89a50\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c44bdcae-947c-4914-841e-d72a53d926a9\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -149,7 +156,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-91fcc0c4-5e22-467e-a39d-23e5b3b89a50')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c44bdcae-947c-4914-841e-d72a53d926a9')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -201,12 +208,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-91fcc0c4-5e22-467e-a39d-23e5b3b89a50 button.colab-df-convert');\n",
+              "        document.querySelector('#df-c44bdcae-947c-4914-841e-d72a53d926a9 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-91fcc0c4-5e22-467e-a39d-23e5b3b89a50');\n",
+              "        const element = document.querySelector('#df-c44bdcae-947c-4914-841e-d72a53d926a9');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -226,8 +233,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-2acc0152-7abd-4b52-9b6c-fefc76ed7f3e\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-2acc0152-7abd-4b52-9b6c-fefc76ed7f3e')\"\n",
+              "<div id=\"df-995bb319-4cc3-479f-abb9-e3fac3f3b7ae\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-995bb319-4cc3-479f-abb9-e3fac3f3b7ae')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -346,7 +353,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-2acc0152-7abd-4b52-9b6c-fefc76ed7f3e button');\n",
+              "        document.querySelector('#df-995bb319-4cc3-479f-abb9-e3fac3f3b7ae button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -363,7 +370,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 14
         }
       ]
     },
@@ -378,9 +385,9 @@
           "height": 240
         },
         "id": "cBnwmf_tXgeT",
-        "outputId": "5a00668a-4abb-41f1-91e0-913d3ae536da"
+        "outputId": "b45cb193-1c71-4805-e942-a9662812a534"
       },
-      "execution_count": 4,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -442,7 +449,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 15
         }
       ]
     },
@@ -456,9 +463,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hIUWdegTXbDi",
-        "outputId": "b1d95cbd-6ac7-4980-efb0-5569c72474ac"
+        "outputId": "5dae12cf-67d6-49e5-8610-146dd20af6c0"
       },
-      "execution_count": 5,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -468,7 +475,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 16
         }
       ]
     },
@@ -482,9 +489,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GtsYrlG7Xdd9",
-        "outputId": "b80242a9-97e3-444e-c460-49637dab9610"
+        "outputId": "62bb3483-e4b1-43e7-f08c-2de8bbdfc316"
       },
-      "execution_count": 6,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -514,7 +521,7 @@
       "metadata": {
         "id": "a6Utpys8Xkx5"
       },
-      "execution_count": 7,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -525,7 +532,7 @@
       "metadata": {
         "id": "VYhBYRJQXzBA"
       },
-      "execution_count": 8,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -536,7 +543,7 @@
       "metadata": {
         "id": "7iWl_t9lYGSG"
       },
-      "execution_count": 9,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -547,7 +554,7 @@
       "metadata": {
         "id": "Er9FzfjCYWvs"
       },
-      "execution_count": 10,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -561,9 +568,9 @@
           "height": 206
         },
         "id": "waIW7su0YoKn",
-        "outputId": "0728ee96-88e5-4752-b4d4-d8f2fbedd05a"
+        "outputId": "e634b64d-2fb6-4293-b694-4d6d768247cb"
       },
-      "execution_count": 11,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -578,7 +585,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4dadfa5b-3676-4989-b542-c66de0c26c87\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-84e6b53d-8704-4248-ae1c-7d805b5f0839\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -633,7 +640,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4dadfa5b-3676-4989-b542-c66de0c26c87')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-84e6b53d-8704-4248-ae1c-7d805b5f0839')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -685,12 +692,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-4dadfa5b-3676-4989-b542-c66de0c26c87 button.colab-df-convert');\n",
+              "        document.querySelector('#df-84e6b53d-8704-4248-ae1c-7d805b5f0839 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-4dadfa5b-3676-4989-b542-c66de0c26c87');\n",
+              "        const element = document.querySelector('#df-84e6b53d-8704-4248-ae1c-7d805b5f0839');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -710,8 +717,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-8b2ba02c-f443-4d87-86e7-38666ec1d006\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-8b2ba02c-f443-4d87-86e7-38666ec1d006')\"\n",
+              "<div id=\"df-bac72e3c-5ef4-41de-a77d-7fbbdb3cb5d5\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-bac72e3c-5ef4-41de-a77d-7fbbdb3cb5d5')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -830,7 +837,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-8b2ba02c-f443-4d87-86e7-38666ec1d006 button');\n",
+              "        document.querySelector('#df-bac72e3c-5ef4-41de-a77d-7fbbdb3cb5d5 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -847,7 +854,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 22
         }
       ]
     },
@@ -859,7 +866,7 @@
       "metadata": {
         "id": "bg1ElcHnamNL"
       },
-      "execution_count": 12,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -870,7 +877,7 @@
       "metadata": {
         "id": "B-A_aH_4Yp9d"
       },
-      "execution_count": 13,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -881,8 +888,15 @@
       "metadata": {
         "id": "fHBqmIRTan1X"
       },
-      "execution_count": 14,
+      "execution_count": 25,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "vVOtAPVFwHXn"
+      }
     },
     {
       "cell_type": "code",
@@ -895,9 +909,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K5IzrWInawrF",
-        "outputId": "80dabb05-622c-4ab5-d14f-b0a3440bdb38"
+        "outputId": "0cfc3c46-0420-4455-a4e1-a2c2681b1856"
       },
-      "execution_count": 15,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -915,7 +929,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 26
         }
       ]
     },
@@ -929,7 +943,7 @@
       "metadata": {
         "id": "rKu2AkWpbEKX"
       },
-      "execution_count": 16,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -946,9 +960,9 @@
           "height": 240
         },
         "id": "FpSPjKaLcPkH",
-        "outputId": "4520451f-5c57-41cb-f1a9-0492b83e7138"
+        "outputId": "35391ce0-c25a-47e1-b8b7-26d89ae0fe26"
       },
-      "execution_count": 20,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1010,7 +1024,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 30
         }
       ]
     },
@@ -1025,9 +1039,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qiLWZ_eydefP",
-        "outputId": "d9cbb7de-0334-42da-8b22-dceeb047b958"
+        "outputId": "fd766830-1405-4924-fc9c-d63fa6bc5c5d"
       },
-      "execution_count": 19,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -1044,7 +1058,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 29
         }
       ]
     },
@@ -1057,7 +1071,7 @@
       "metadata": {
         "id": "3umvOt8Vc1P_"
       },
-      "execution_count": 21,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -1068,7 +1082,7 @@
       "metadata": {
         "id": "lqk_1tySd07e"
       },
-      "execution_count": 22,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -1079,7 +1093,7 @@
       "metadata": {
         "id": "5RxzX6eueMiF"
       },
-      "execution_count": 23,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -1095,9 +1109,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e4Fv7gEqedNw",
-        "outputId": "da0f56eb-369e-47ad-fb41-96fda17aa18f"
+        "outputId": "ebf3e49d-9f04-4a63-e2e9-af761c9b78fe"
       },
-      "execution_count": 24,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -1119,7 +1133,163 @@
       "metadata": {
         "id": "lTPRq7iqemVO"
       },
-      "execution_count": 25,
+      "execution_count": 35,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tfidf_vect=TfidfVectorizer(analyzer='word',token_pattern=r'\\w{1,}',max_features=5000)\n",
+        "tfidf_vect.fit(data['content'])\n",
+        "xtrain_tfidf=tfidf_vect.transform(X_train['content'])\n",
+        "xtest_tfidf=tfidf_vect.transform(X_test['content'])"
+      ],
+      "metadata": {
+        "id": "c2oaA-KOt_gg"
+      },
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.linear_model import PassiveAggressiveClassifier\n",
+        "from sklearn import metrics\n",
+        "pclf = PassiveAggressiveClassifier(max_iter=50)\n",
+        "pclf.fit(xtrain_tfidf, y_train)\n",
+        "pred = pclf.predict(xtest_tfidf)\n",
+        "print(metrics.classification_report(y_test,pred))"
+      ],
+      "metadata": {
+        "id": "I41tYI7Lud3s",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "861eb0c8-09c9-4f8f-91a7-448dc1244e7c"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.96      0.96      0.96      3116\n",
+            "           1       0.96      0.96      0.96      3124\n",
+            "\n",
+            "    accuracy                           0.96      6240\n",
+            "   macro avg       0.96      0.96      0.96      6240\n",
+            "weighted avg       0.96      0.96      0.96      6240\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(metrics.confusion_matrix(y_test,pred))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L7SVVPgxw9uq",
+        "outputId": "1b6466af-44b5-4390-8242-ae641a66df08"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[2991  125]\n",
+            " [ 121 3003]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.neural_network import MLPClassifier\n",
+        "mlpclf =MLPClassifier(hidden_layer_sizes=(256,64,16),\n",
+        "                      activation='relu',\n",
+        "                      solver='adam')\n",
+        "mlpclf.fit(xtrain_tfidf,y_train)\n",
+        "predictions = mlpclf.predict(xtest_tfidf)\n",
+        "print(metrics.classification_report(y_test, predictions))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ndi9hpM-zbHR",
+        "outputId": "5d9814b2-427f-4b15-e7af-e9b9add44556"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       0.96      0.96      0.96      3116\n",
+            "           1       0.96      0.96      0.96      3124\n",
+            "\n",
+            "    accuracy                           0.96      6240\n",
+            "   macro avg       0.96      0.96      0.96      6240\n",
+            "weighted avg       0.96      0.96      0.96      6240\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(metrics.confusion_matrix(y_test,predictions))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K4_r5Xhq0rCB",
+        "outputId": "57c54f98-9e0e-4b26-9e37-312f642c5e50"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[3005  111]\n",
+            " [ 115 3009]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pickle\n",
+        "pickle.dump(mlpclf,open('fakenews1.pkl','wb'))\n"
+      ],
+      "metadata": {
+        "id": "qptbTH3r1JW6"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Ycf2kgI31zWB"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
