--- a/Q&A_transformers.ipynb
+++ b/Q&A_transformers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOQYzRiVN0m0MOTOjGLPEwB",
+      "authorship_tag": "ABX9TyM9OG92eVLS/hH+4PCC/6F2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2073,9 +2073,52 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "context=\"\"\"There is a telvision cartoon named Shinchan, He is very childish and acts immature and his character in the carton deoics very much of his annoying behaviour\"\"\"\n",
+        "question=\"What is the cartoon name?\"\n",
+        "inputs=tokenizer(question,context,return_tensors=\"pt\")\n",
+        "with torch.no_grad():\n",
+        "  outputs=model(**inputs)\n",
+        "  start_scores=outputs.start_logits\n",
+        "  end_scores=outputs.end_logits"
+      ],
       "metadata": {
         "id": "WNU58VljBGnV"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "start_idx=torch.argmax(start_scores)\n",
+        "end_idx=torch.argmax(end_scores)+1\n",
+        "answer=tokenizer.convert_tokens_to_string(tokenizer.convert_ids_to_tokens(inputs[\"input_ids\"][0][start_idx:end_idx]))\n",
+        "print(f\"Answer:{answer}\")"
+      ],
+      "metadata": {
+        "id": "-mkVni2YDuT-",
+        "outputId": "61022900-4ea4-4280-c7e1-18bbcb22acef",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Answer:Shinchan\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Mo3WvzsKDw8D"
       },
       "execution_count": null,
       "outputs": []
