--- a/Intro_Gemini_AI.ipynb
+++ b/Intro_Gemini_AI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNj1AHRFzlZEp3Y17PKLJ9i",
+      "authorship_tag": "ABX9TyOI9ZKwrM2aHXy/yZYnf8fR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -648,9 +648,37 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "image_path=\"logo1.jpg\"\n",
+        "image=Image.open(image_path)\n",
+        "response=model.generate_content([\"Identify the brand or company associated with this logo\",image])\n",
+        "print(response.text)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "id": "DZ8KjaeMxonh",
+        "outputId": "bf4fed59-cc08-4df7-fcbf-15d5fe112a20"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "That's the logo for **Amazon**.\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "DZ8KjaeMxonh"
+        "id": "uuICJLkay8b1"
       },
       "execution_count": null,
       "outputs": []
